--- a/css/book.css
+++ b/css/book.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Condensed|Open+Sans|Lato|Lora|Fira+Sans|Yellotail");
+@import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Condensed|Open+Sans|Lato|Lora|Fira+Sans|Yellowtail");
+
 
 /* title page */
 .book .book-body .page-wrapper .page-inner section.normal h1.title {
