--- a/css/book.css
+++ b/css/book.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Bitter|Roboto|Roboto+Mono|Roboto+Condensed|Open+Sans|Lato|Lora|Fira+Sans|Yellowtail");
+@import url("https://fonts.googleapis.com/css?family=Bitter|Roboto|Roboto+Mono|Roboto+Condensed|Open+Sans|Open+Sans+Condensed|Lato|Lora|Fira+Sans|Yellowtail");
 
 
 /* title page */
